// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render content slot correctly 1`] = `
<div class="r-badge r-badge--top-right r-badge--danger">
  Custom Content
</div>
`;

exports[`should render nothing when content is empty string 1`] = `""`;

exports[`should render nothing when content is undefined 1`] = `""`;

exports[`should render nothing when content is zero 1`] = `
<div class="r-badge r-badge--top-right r-badge--danger">
  0
</div>
`;
